--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "happ3n-icp-hackathon",
+    "name": "dictnv-icp-exercise",
     "version": "0.2.0",
     "license": "MIT",
     "author": "DvCode Technologies Inc",
